re PR c++/15337 (sizeof on incomplete type diagnostic)

PR c++/15337
	* error.c (c_sizeof_or_alignof_type): Use more detailed error
	message.

	PR c++/15766
	* parser.c (cp_parser_iteration_statement): Fix typo in error
	message.

	PR c++/14777
	* pt.c (tsubst_default_argument): Do not defer access checks
	while substituting into the default argument.

	PR c++/15554
	* pt.c (tsubst_copy): Do not try to substitute for an enumeration
	constant in a non-dependent context.

	PR c++/15057
	* except.c (build_throw): Ensure that temp_expr has been
	initialized.

	PR c++/15337
	* g++.dg/expr/sizeof3.C: New test.

	PR c++/14777
	* g++.dg/template/access14.C: New test.

	PR c++/15554
	* g++.dg/template/enum1.C: New test.

	PR c++/15057
	* g++.dg/eh/throw1.C: New test.

From-SVN: r82692