gcc/testsuite/g++.dg/eh/throw1.C
@@ -1,0 +1,9 @@
+class S  
+{ 
+public: 
+  S(){} 
+};  
+  
+int foo(char* m1) {  
+  throw (m1 ? S() : S()); 
+} 
